DuPont DevSB/src/objects/Yarn_Specification__c.object
<CustomObject>
    <description>This object stores the information of the Hose products.</description>
    <fields>
        <fullName>KV_0_Cycles__c</fullName>
        <description>This field stores the information unit in 0 cycles used by Kevlar Automotive Selector Tool.</description>
        <label>0K Cycles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KV_1000_Cycles__c</fullName>
        <description>This field stores the information unit in 1000 cycles used by Kevlar Automotive Selector Tool.</description>
        <label>1000K Cycles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KV_100_Cycles__c</fullName>
        <description>This field stores the information unit in 100 cycles used by Kevlar Automotive Selector Tool.</description>
        <label>100K Cycles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KV_Operating_Temperature__c</fullName>
        <description>This is the temperature that the hose is going to be used</description>
        <label>Operating Temperature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>140</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>165</fullName>
                </value>
                <value>
                    <fullName>170</fullName>
                </value>
                <value>
                    <fullName>175</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>190</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>220</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>185</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>47</fullName>
                    <isActive>false</isActive>
                    <label>47</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KV_Product_Name__c</fullName>
        <description>This formula field is used to store the name of the product in Kevlar Automotive Selector Tool.</description>
        <formula>KV_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KV_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lookup for the product object used for the Kevlar automotive selector tool</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Yarn Specifications</relationshipLabel>
        <relationshipName>Yarn_Specifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Yarn Specification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KV_Product__c</columns>
        <columns>KV_Operating_Temperature__c</columns>
        <columns>KV_0_Cycles__c</columns>
        <columns>KV_50_Cycles__c</columns>
        <columns>KV_100_Cycles__c</columns>
        <columns>KV_170_Cycles__c</columns>
        <columns>KV_250_Cycles__c</columns>
        <columns>KV_350_Cycles__c</columns>
        <columns>KV_500_Cycles__c</columns>
        <columns>KV_750_Cycles__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>KV_1000_Cycles__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>YS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yarn Specifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>